Fix z-index on exporo navbar with sticky elements
if the sidebar is long enough it was over the navbar, not under.

--- a/application/resources/assets/sass/_navigation.scss
+++ b/application/resources/assets/sass/_navigation.scss
@@ -2,4 +2,5 @@
 .navbar-exporo {
   background-color: $white;
   box-shadow: 0 2px 4px rgba(black, 0.04);
+  z-index: ($zindex-sticky + 5);
 }
